--- a/examples/esm/package.json
+++ b/examples/esm/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "@shellicar/core-config-examples-individual",
+  "name": "@shellicar/core-config-examples-esm",
   "private": true,
-  "main": "index.ts",
+  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "tsx .",
+    "build": "tsup-node",
+    "start": "node .",
     "type-check": "tsc -p tsconfig.check.json"
   },
   "dependencies": {
+    "@shellicar/core-config": "workspace:^",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@shellicar/core-config": "workspace:^",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^22.10.5",
+    "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
