--- a/examples/readme/package.json
+++ b/examples/readme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shellicar/core-config-examples-zod-config",
+  "name": "@shellicar/core-config-examples-readme",
   "private": true,
   "type": "module",
   "main": "dist/index.js",
@@ -8,15 +8,14 @@
     "start": "node .",
     "type-check": "tsc -p tsconfig.check.json"
   },
-  "dependencies": {
-    "@shellicar/core-config": "workspace:^",
-    "zod": "^3.24.1"
-  },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^22.10.5",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "@shellicar/core-config": "workspace:^"
   }
 }
