--- a/packages/core-config/tsconfig.json
+++ b/packages/core-config/tsconfig.json
@@ -4,9 +4,9 @@
     "moduleResolution": "bundler",
     "target": "ES2022",
     "module": "ES2022",
-    "isolatedModules": true,
     "strict": true,
-    "verbatimModuleSyntax": true,
     "strictNullChecks": true
-  }
+  },
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
