Move version verification to node script

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -8,10 +8,4 @@ pre-push:
     check:
       run: pnpm biome ci --diagnostic-level=error --no-errors-on-unmatched --colors=off {push_files}
     version-check:
-      run: |
-        VERSION=$(git show :packages/core-config/package.json | node -p "JSON.parse(require('fs').readFileSync(0)).version")
-        COUNT=$(git show :CHANGELOG.md | grep -c "\[$VERSION\]")
-        if [ "$COUNT" -ne 2 ]; then
-          echo "Error: Version $VERSION should appear exactly twice in CHANGELOG.md (entry and link), found $COUNT times"
-          exit 1
-        fi
+      run: pnpm verify-version
