Refactor verify version script

--- a/packages/core-config/package.json
+++ b/packages/core-config/package.json
@@ -30,7 +30,7 @@
   "files": ["dist", "*.md"],
   "scripts": {
     "build": "tsup-node",
-    "dev": "tsup-node --watch src",
+    "dev": "tsup-node --watch",
     "test": "vitest run",
     "type-check": "tsc -p tsconfig.check.json"
   },
