--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
+  "packageManager": "pnpm@10.15.0",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
@@ -19,10 +19,10 @@
     "verify-version": "./scripts/verify-version.sh"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "lefthook": "^1.10.1",
-    "npm-check-updates": "^17.1.13",
-    "syncpack": "^13.0.0",
-    "turbo": "^2.3.3"
+    "@biomejs/biome": "^2.2.2",
+    "lefthook": "^1.12.3",
+    "npm-check-updates": "^18.0.2",
+    "syncpack": "^13.0.4",
+    "turbo": "^2.5.6"
   }
 }
