--- a/examples/esm/package.json
+++ b/examples/esm/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@shellicar/core-config": "workspace:^",
-    "zod": "^3.24.1"
+    "zod": "^4.1.1"
   },
   "devDependencies": {
-    "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^22.10.5",
-    "tsup": "^8.3.5",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "@shellicar/build-clean": "1.0.0-preview.5",
+    "@tsconfig/node20": "^20.1.6",
+    "@types/node": "^24.3.0",
+    "terser": "^5.43.1",
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2"
   }
 }
