--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8",
+  "packageManager": "pnpm@10.26.2",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
@@ -19,10 +19,10 @@
     "verify-version": "./scripts/verify-version.sh"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.0",
-    "lefthook": "^2.0.0",
-    "npm-check-updates": "^19.1.1",
+    "@biomejs/biome": "^2.3.10",
+    "lefthook": "^2.0.13",
+    "npm-check-updates": "^19.2.0",
     "syncpack": "^13.0.4",
-    "turbo": "^2.5.8"
+    "turbo": "^2.7.2"
   }
 }
