--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,5 +3,7 @@ packages:
   - examples/*
 
 overrides:
+  glob@>=10.2.0 <10.5.0: '>=10.5.0'
+  js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
   vite@>=7.1.0 <=7.1.10: '>=7.1.11'
   vite@>=7.1.0 <=7.1.4: '>=7.1.5'
